refactored remaining Report.newError to newError